Revert: APPS-427: animation width fixed; the AV stays visible during the animation
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@66778 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/layout.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/layout.scss
@@ -77,7 +77,7 @@
 		/*top: 9px !important;*/
 	}
 
-	.hidden, .temporarilyHidden {
+	.hidden {
 	 	display: none;
 	 }
 
